---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: ????
  Info:
    - Add 10k slider step
    - Disable the recipe
    - Write readme
    - Make the south side of the module a straighter black line
    - Clean up the structs with deathrattles
    - Fix quality beacons having no gui
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2025. 01. 30
  Info:
    - Luaplayer -> LuaPlayer
    - Prepare to swap modules with tags in blueprints
    - Rename the modules
    - Hide beacon module insert plan
    - Move model strength computer to shared
    - Store effects within blueprint tags
    - Add a remote interface through which to update beacons
    - Set beacon effects based on blueprint tags
    - Fix slider being in the wrong position when opening the gui
    - Support cloning
    - Fix module lamp base pixels still being visible
    - Update description and dependencies
    - Explain that quality is divided by 10
    - Support editor extentions
    - Give the beacons during `/cheat all` regardless of ee
    - Prevent players & bots from interacting with the modules themselves
    - Make beacon inoperable and make the gui standalone
    - Update thumbnail
    - Add tooltip to productivity
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 01. 29
  Info:
    - Prepare for small scale module insertion test
    - Read the positive bits as expected
    - Insert modules based on the bits
    - Bodge broken negative values
    - Remember values in struct, and (thus) support setting multiple effects at once
    - Fix icon cropping crime
    - Still make quality modules without the feature flag, but without the effect
    - Set the minmax back to their full bounds
    - This seems to work
    - Good night peter panda
    - Zoom in on thumbnail