@@ -1,6 +1,3 @@
-local mod_prefix = "beacon-interface--"
-local shared = require("shared")
-
 local Interface = {}
 
 function Interface.refresh_effects(unit_number)
